# OmniData

./: CMakeLists.txt  DataTable.cpp  DataTable.hpp  Database.cpp  Database.hpp  IDatabase.hpp  MySQLDatabase.cpp  MySQLDatabase.hpp  SQLParams.hpp  SQLServerDatabase.cpp  SQLServerDatabase.hpp
